log/build_2026-01-23_10-12-20/exam_example/stderr.log
  File "/home/ubuntu/ros_workspace/install/exam_example/lib/python3.12/site-packages/exam_example/distance_calc.py", line 60
    else 
         ^
SyntaxError: expected ':'

